--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <nav>
         <img src="Logo_Main.png" width="200" height="69">
             <ul>
-                    <li><a href="index.html#Home">RWH</a></li>
+                    <li><a href="index.html#Home">Rain water harvesting</a></li>
                     <li><a href="index.html#app">Application</a></li>
                     <li><a href="index.html#imp">methods</a></li>
                     <li><a href="video.html">Visual guide</a></li>
