--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <nav>
             <img src="Logo_Main.png" width="200" height="69">
                 <ul>
-                        <li><a href="#Home">RWH</a></li>
+                        <li><a href="#Home">rain water harvesting</a></li>
                         <li><a href="#app">Application</a></li>
                         <li><a href="#imp">methods</a></li>
                         <li><a href="video.html">Visual guide</a></li>
